--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="splash_text">36sp</dimen>
+    <dimen name="toolbar_text_size">18sp</dimen>
 
 </resources>
