--- a/app/src/main/res/layout/fragment_skill.xml
+++ b/app/src/main/res/layout/fragment_skill.xml
@@ -8,7 +8,7 @@
     <data>
         <variable
             name="vm"
-            type="com.cvcheck.viewmodel.AboutViewModel" />
+            type="com.cvcheck.viewmodel.SkillViewModel" />
         <import type="android.view.View" />
     </data>
 
@@ -33,29 +33,26 @@
 
             </androidx.appcompat.widget.Toolbar>
 
-            <androidx.core.widget.NestedScrollView
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvSkill"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/pageBackground">
+                android:layout_height="0dp"
+                app:layoutManager="LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                    <include
-                        android:id="@+id/userInfoLayout"
-                        layout="@layout/item_user_info"
-                        bind:vm="@{vm}"/>
-
-                    <include
-                        android:id="@+id/aboutMeLayout"
-                        layout="@layout/item_about_me"
-                        bind:vm="@{vm}"/>
-
-                </LinearLayout>
-
-            </androidx.core.widget.NestedScrollView>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
