--- a/app/src/main/res/layout/item_about_me.xml
+++ b/app/src/main/res/layout/item_about_me.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="vm"
+            type="com.cvcheck.viewmodel.AboutViewModel" />
+        <import type="android.view.View" />
+    </data>
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/sectionBackground"
@@ -18,6 +30,8 @@
         android:id="@+id/tvAboutMe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/text_subtitle" />
+        android:textColor="@color/text_subtitle"
+        android:text="@{vm.aboutMeLiveData.aboutMe}"/>
 
 </LinearLayout>
+</layout>
